pkg/cmd/ingress/testdata/tls/source/config-root/namespaces/myapps/modify-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: modify-ingress
  namespace: myapps
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: godemo48
            port:
              number: 80
    host: godemo48.cluster.local
  tls:
  - hosts:
    - godemo48.cluster.local
    secretName: ""
